# project_pallas_ros2

./: .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: pallas-test.md  pallas-unitree.md  pallas.md
.claude/rules/: boot-context.md  next-steps-tracking.md  pallas-safety.md
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  sensor_preset_request.yml  success_report.yml
.github/workflows/: ci.yml
config/: colcon.defaults.yaml
docs/: apple_silicon.md  architecture.md  clean_room.md  demo_quickstart.md  first_lidar_test.md  gazebo_simulation.md  launch_assets.md  runtime_profiles.md  sensor_presets.md
docs/media/: pallas-demo-rviz.html
python/pallas_dev/: __init__.py  cli.py  demo.py  presets.py  rosenv.py
ros2_ws/src/anima_pallas_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/anima_pallas_ros2/config/: pallas.yaml  pallas_core.yaml  pallas_core_gazebo.yaml  pallas_core_hesai.yaml  pallas_core_livox.yaml  pallas_core_ouster.yaml  pallas_core_robosense.yaml  pallas_core_rslidar.yaml  pallas_core_unitree.yaml  pallas_core_velodyne.yaml  pallas_ct.yaml  pallas_ct_gazebo.yaml  pallas_ct_hesai.yaml  pallas_ct_livox.yaml  pallas_ct_ouster.yaml  pallas_ct_robosense.yaml  pallas_ct_rslidar.yaml  pallas_ct_unitree.yaml  pallas_ct_velodyne.yaml
ros2_ws/src/anima_pallas_ros2/include/anima_pallas_ros2/: attitude_bootstrap.hpp  cloud_ingest.hpp  config.hpp  core_runtime.hpp  ct_runtime.hpp  imu_buffer.hpp  local_map.hpp  motion_integrator.hpp  normal_utils.hpp  pipeline.hpp  point_parser.hpp  runtime_node.hpp  scan_sampler.hpp  strapdown_tracker.hpp  surfel_volume.hpp  timed_pose_spline.hpp  types.hpp
ros2_ws/src/anima_pallas_ros2/launch/: pallas.launch.py  pallas_core.launch.py  pallas_ct.launch.py
ros2_ws/src/anima_pallas_ros2/rviz/: pallas_demo.rviz  pallas_rainbow.rviz
ros2_ws/src/anima_pallas_ros2/src/: attitude_bootstrap.cpp  cloud_ingest.cpp  core_runtime.cpp  ct_runtime.cpp  imu_buffer.cpp  local_map.cpp  motion_integrator.cpp  pallas_core_node.cpp  pallas_ct_node.cpp  pallas_node.cpp  pipeline.cpp  point_parser.cpp  scan_sampler.cpp  strapdown_tracker.cpp  surfel_volume.cpp  timed_pose_spline.cpp
scripts/: bootstrap.sh  build.sh  demo_benchmark.py  docker_smoke.sh  gazebo_cuda_test.sh  gazebo_lidar_test.sh  live_lidar_test.sh  make_demo_package.py  test.sh
tests/: test_cli.py
